@@ -8,6 +8,7 @@
 -add activeevent.
 -add closeevent.
 -update color object.
+-revise sprite to optimize.
 
 0.32    2022-04-17
 -add key set_repeat method.
